# til

./: README.md  config.example.yaml  pyproject.toml
tests/: test_config.py  test_notes.py  test_publish.py
til/: __init__.py  cli.py  config.py  notes.py  publish.py
